<resources>
    <string name="app_name">MedVault</string>
    <string name="text_rekam_media_elektronik">Rekam Media Elektronik</string>
    <string name="text_remember_password">Remember password</string>
    <string name="text_masukkan_password">Masukkan Password</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_belum_punya_akun">Belum Punya Akun?</string>
    <string name="text_daftar">Daftar</string>
    <string name="text_masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="text_masukkan_alamat">Masukkan Alamat</string>
    <string name="text_masukkan_email">Masukkan Email</string>
    <string name="text_buat_username">Buat Username</string>
    <string name="text_buat_password">Buat Password</string>
    <string name="text_silahkan_buat_akun_anda">Silahkan Buat Akun Anda</string>
    <string name="text_home">Home</string>
    <string name="text_data_pasien">Data Pasien</string>
    <string name="text_data_diagnosa">Data Diagnosa</string>
    <string name="text_data_ibu_anak">Data Ibu Anak</string>
    <string name="text_seputar_informasi">Seputar Informasi</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_keluar">Keluar</string>
    <string name="text_konfirmasi_keluar">Konfirmasi Keluar</string>
    <string name="text_apakah_anda_yakin_mau_keluar">Apakah Anda Yakin mau keluar?</string>
    <string name="text_tidak">Tidak</string>
    <string name="text_informasi">Informasi</string>
    <string name="text_profile">Profile</string>
    <string name="text_nama">Nama</string>
    <string name="text_perintis">Perintis</string>
    <string name="text_email">Email</string>
    <string name="text_hint_perintis_gmail_com">perintis@gmail.com</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_nomor_hp">Nomor HP</string>
    <string name="text_hint_password">•••••••</string>
    <string name="text_simpan">Simpan</string>
    <string name="text_cari_pasien">Cari Pasien</string>
    <string name="content_description_add_patient">add patient</string>
    <string name="text_add_patient">Add Patient</string>
    <string name="text_patient_profile">Patient Profile</string>
    <string name="text_nik">NIK</string>
    <string name="text_hint_nik">062554848412</string>
    <string name="text_agama">Agama</string>
    <string name="text_tanggal_lahir">Tanggal Lahir</string>
    <string name="text_alamat">Alamat</string>
    <string name="content_description_alamat">jalan merdeka</string>
    <string name="text_jenis_kelamin">Jenis Kelamin</string>
    <string name="text_detail_data_pasien">Detail Data Pasien</string>
    <string name="text_form_nama_lengkap">Nama Lengkap:</string>
    <string name="text_form_no_hp">No Hp:</string>
    <string name="text_form_agama">Agama:</string>
    <string name="text_form_alamat">Alamat</string>
    <string name="text_form_jenis_kelamin">Jenis Kelamin:</string>
    <string name="text_form_tanggal_lahir">Tanggal Lahir:</string>
    <string name="text_form_nik">NIK:</string>
    <string name="text_hapus_data">Hapus Data</string>
    <string name="text_apakah_anda_yakin_menghapus_data_pasien">Apakah Anda Yakin menghapus data Pasien?</string>
    <string name="text_hapus">Hapus</string>
    <string name="text_kunjungan">Kunjungan</string>
    <string name="text_tanggal_kunjungan">Tanggal Kunjungan</string>
    <string name="text_kunjungan_non_medis">Kunjungan Non-Medis</string>
    <string name="text_nomor_kunjungan">Nomor Kunjungan</string>
    <string name="text_nama_pasien">Nama Pasien</string>
    <string name="text_keluhan">Keluhan</string>
    <string name="text_tindakan">Tindakan</string>
    <string name="text_biaya_pembayaran">Biaya Pembayaran</string>
    <string name="text_kunjungan_medis">Kunjungan Medis</string>
    <string name="text_anamnesa">Anamnesa</string>
    <string name="text_input_gejala">Input Gejala</string>
    <string name="text_hasil_diagnosa">Hasil Diagnosa</string>
    <string name="text_add_diagnosa">Add Diagnosa</string>
    <string name="text_gejala_1">Gejala 1</string>
    <string name="text_gejala_2">Gejala 2</string>
    <string name="text_gejala_3">Gejala 3</string>
    <string name="text_gejala_4">Gejala 4</string>
    <string name="text_gejala_5">Gejala 5</string>
    <string name="text_diagnosa">Diagnosa</string>
    <string name="text_gejala">Gejala</string>
    <string name="text_hasil">Hasil</string>
    <string name="text_form_nama">Nama:</string>
    <string name="text_usia">Usia:</string>
    <string name="text_riwayat_kunjungan">Riwayat Kunjungan</string>
    <string name="text_form_no_kunjungan">No. Kunjungan:</string>
    <string name="text_form_tanggal_waktu">Tanggal / Waktu:</string>
    <string name="text_form_gejala">Gejala:</string>
    <string name="text_form_anamnesa">Anamnesa:</string>
    <string name="text_form_diagnosa">Diagnosa:</string>
    <string name="text_form_catatan_tindakan">Catatan Tindakan:</string>
    <string name="text_apakah_anda_yakin_menghapus_data_kunjungan">Apakah Anda Yakin menghapus data kunjungan?</string>
    <string name="text_pilih_kunjungan">Pilih Kunjungan</string>
    <string name="text_medis">Medis</string>
    <string name="text_non_medis">Non Medis</string>
    <string name="text_sistole_diastol">Sistole/Diastol:</string>
    <string name="text_form_suhu">Suhu:</string>
    <string name="text_form_detak_nadi">Detak Nadi:</string>
    <string name="text_form_berat_badan">Berat Badan:</string>
    <string name="text_form_tinggi_badan">Tinggi Badan:</string>
    <string name="text_data_pengunjung">Data Pengunjung</string>
    <string name="text_masukkan_identifier">Masukkan Identifier</string>
    <string name="text_street">Street</string>
    <string name="text_umur">Umur</string>
    <string name="text_form_umur">Umur:</string>
    <string name="text_masukkan_username">Masukkan Username</string>
    <string name="unit_cm">cm</string>
    <string name="unit_kg">kg</string>
    <string name="unit_celcius">°C</string>
    <string name="unit_bpm">bpm</string>
    <string name="unit_mmhg">mmHg</string>
    <string name="text_form_keluhan">Keluhan:</string>
    <string name="text_form_biaya">Biaya:\n</string>
</resources>