<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_25">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_informasi"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:background="@drawable/background_white_rounded"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <TextView
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_data_pasien"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_form_nama"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_form_tanggal_lahir"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_form_alamat"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_form_jenis_kelamin"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvUsia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/text_usia"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRiwayatKunjungan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:background="@drawable/background_white_rounded"
            app:layout_constraintTop_toBottomOf="@id/llDetail"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text_riwayat_kunjungan"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginEnd="4dp"
                    android:text="@string/text_form_no_kunjungan"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvNoKunjungan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/text_form_nama"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginEnd="4dp"
                    android:text="@string/text_form_tanggal_waktu"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTanggalWaktu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/text_form_nama"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvGejala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:text="@string/text_form_gejala"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvGejalaList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAnamnesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:text="@string/text_form_anamnesa"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAnamnesaList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvDiagnosa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:text="@string/text_form_diagnosa"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvDiagnosaList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvKeluhanLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:text="@string/text_form_keluhan"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvKeluhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvBiayaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:text="@string/text_form_biaya"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvBiaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text=""
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginEnd="4dp"
                android:text="@string/text_form_catatan_tindakan"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvCatatanTindakan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text=""
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>